ignore files added

--- a/templates/menu/menu.css
+++ b/templates/menu/menu.css
@@ -42,6 +42,7 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3b12e', endColorstr='#c70a8d',GradientType=1 );
   z-index: 10;
 }
+/* aqui */
 .Nav-menu{
   display: block;
   position: fixed;
